@@ -1,5 +1,16 @@
 2008-11-24  Simon Fraser  <simon.fraser@apple.com>
 
+        Reviewed by Darin Adler
+
+        Followup from changes for https://bugs.webkit.org/show_bug.cgi?id=22433
+        
+        Make RenderView::selectionRect() private to cause compile-time
+        errors if someone tries to call it.
+
+        * rendering/RenderView.h:
+
+2008-11-24  Simon Fraser  <simon.fraser@apple.com>
+
         Reviewed by Dan Bernstein
 
         Via: https://bugs.webkit.org/show_bug.cgi?id=22433
